--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
-    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
@@ -23,6 +24,7 @@
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-modal": "2.2.2",
+    "react-router-dom": "^5.2.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "validator": "8.0.0",
