--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react-dates": "^21.8.0",
     "react-dom": "17.0.0",
     "react-modal": "2.2.2",
+    "react-password-strength": "^2.4.0",
+    "react-password-strength-bar": "^0.3.3",
     "react-redux": "^7.2.4",
     "react-router-dom": "4.2.2",
     "react-test-renderer": "16.0.0",
